# hyperclaude

./: ARCHITECTURE.md  CLAUDE.md  README.md  launch.sh  pyproject.toml  swarm.sh
hyperclaude/: __init__.py  cli.py  config.py  launcher.py  monitor.py  protocols.py
hyperclaude/templates/: manager-preamble.md  worker-preamble.md
hyperclaude/templates/protocols/: default.md  git-branch.md  review.md  search.md
